[gd_scene load_steps=3 format=3 uid="uid://dtcs2rs1ixl7a"]

[ext_resource type="Script" path="res://UI/main_menu.gd" id="1_wv7xw"]
[ext_resource type="Script" path="res://UI/options.gd" id="2_mtekv"]

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_wv7xw")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="MainButtons" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="StartGame" type="Button" parent="HBoxContainer/VBoxContainer2/MainButtons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Start Game"

[node name="ToMainMenu" type="Button" parent="HBoxContainer/VBoxContainer2/MainButtons"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
text = "Main Menu"

[node name="OptionsButton" type="Button" parent="HBoxContainer/VBoxContainer2/MainButtons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Options"

[node name="HowToButton" type="Button" parent="HBoxContainer/VBoxContainer2/MainButtons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "How To Play"

[node name="Quit" type="Button" parent="HBoxContainer/VBoxContainer2/MainButtons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[node name="Control2" type="Control" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SubMenus" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="SubMenus"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 175
theme_override_constants/margin_top = 75
theme_override_constants/margin_right = 175
theme_override_constants/margin_bottom = 75

[node name="Options" type="TabContainer" parent="SubMenus/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("2_mtekv")

[node name="Video" type="Control" parent="SubMenus/MarginContainer/Options"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SubMenus/MarginContainer/Options/Video"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Audio" type="Control" parent="SubMenus/MarginContainer/Options"]
visible = false
layout_mode = 2

[node name="HowToPlay" type="TabContainer" parent="SubMenus/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="SubMenus"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.147
anchor_bottom = 0.153
offset_right = -0.343994
offset_bottom = -0.144005
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="BackToMenu" type="Button" parent="SubMenus/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"

[node name="Blackout" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="HBoxContainer/VBoxContainer2/MainButtons/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/MainButtons/ToMainMenu" to="." method="_on_to_main_menu_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/MainButtons/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/MainButtons/HowToButton" to="." method="_on_how_to_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/MainButtons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="SubMenus/MarginContainer2/BackToMenu" to="." method="_on_back_to_menu_pressed"]
